--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{ message }}!
   </h1>
-  <app-test (childEvent)="message=$event" [parentData]="name"></app-test>
+  <app-test></app-test>
   
  
 </div>
