--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,9 @@
   <h1>
     Welcome to {{ message }}!
   </h1>
-  <app-test></app-test>
   
- 
+ <app-employee-list></app-employee-list>
+ <app-employee-detail></app-employee-detail>
 </div>
 
 
